--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -17,9 +17,17 @@
 			</div>
 			<div class="postcard-body">
 				<div class="body-left">
-					<p>Look how awesome! this is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course</p>
+					<p>
+						Look how awesome! this is a
+						postcard that I created using 
+						HTML5 and CSS3 during my 
+						4Geeks Academy Course
+					</p>
 
-					<p>This is so cool, can't wait to start doing more stuff!</p>
+					<p>
+						This is so cool, can't wait to<br />
+						start doing more stuff!
+					</p>
 				</div>
 				<div class="body-right">
 					<input type="text" placeholder="Some Name" />
